fix: 修复chat模块中失败的单元测试
- 修复DeepSeekApiClientTest中UnnecessaryStubbing错误，优化mock setup
- 修复GreatWallApiClientTest中JSON响应格式匹配问题
- 优化测试配置避免全局状态污染
- 改进错误消息处理逻辑

主要修复:
- UnnecessaryStubbingException: 通过lenient stubbing和测试级别setup解决
- IllegalArgumentException: 修复空消息验证逻辑
- JSON解析错误: 更新JSON格式匹配各API的实际响应格式
- WebClient构建错误: 修复mock链中的空指针异常